tests/errors/null-in-non-nullable.ssv
#! NULL _

name:string | age:int
Alice       | 30
Bob         | _
